--- a/PlutoWallet/View/NftView.xaml
+++ b/PlutoWallet/View/NftView.xaml
@@ -23,6 +23,7 @@
                                                 Endpoint="{Binding Endpoint}"
                                                 CollectionId="{Binding CollectionId}"
                                                 ItemId="{Binding ItemId}"
+                                                Favourite="{Binding Favourite}"
                                                 />
 
                     </DataTemplate>
