--- a/PlutoWallet/Components/TransactionRequest/TransactionRequestView.xaml
+++ b/PlutoWallet/Components/TransactionRequest/TransactionRequestView.xaml
@@ -51,6 +51,7 @@
                     </Label>
 
                     <Label
+                        IsVisible="false"
                         HorizontalOptions="Center">
                         <Label.FormattedText>
                             <FormattedString>
