--- a/PlutoWallet/Components/NetworkSelect/NetworkBubbleView.xaml
+++ b/PlutoWallet/Components/NetworkSelect/NetworkBubbleView.xaml
@@ -2,31 +2,54 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlutoWallet.Components.NetworkSelect.NetworkBubbleView">
-    <Frame
-            CornerRadius="20"
-            AbsoluteLayout.LayoutBounds="0.5, 0.5, AutoSize, 40"
-            AbsoluteLayout.LayoutFlags="PositionProportional"
-            Padding="5"
-            BackgroundColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
-            BorderColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
-            >
-        <HorizontalStackLayout x:Name="horizontalStackLayout"
-                               MinimumHeightRequest="30"
-                               MinimumWidthRequest="30">
+    <AbsoluteLayout>
+        <Frame
+                CornerRadius="20"
+                AbsoluteLayout.LayoutBounds="0.5, 0.5, AutoSize, 40"
+                AbsoluteLayout.LayoutFlags="PositionProportional"
+                Padding="5"
+                BackgroundColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
+                BorderColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
+                >
+            <HorizontalStackLayout x:Name="horizontalStackLayout"
+                                    MinimumHeightRequest="30"
+                                    MinimumWidthRequest="30">
             
-            <Image x:Name="iconImage"
-                    HeightRequest="30"
-                    WidthRequest="30"
-                    HorizontalOptions="Center"
-                    VerticalOptions="Center"/>
-            <Label x:Name="nameLabel"
-                   IsVisible="false"
-                    VerticalTextAlignment="Center"
-                    VerticalOptions="Center"
-                    Margin="10, 0, 10, 0"
-                    TextColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"/>
+                <Image x:Name="iconImage"
+                        HeightRequest="30"
+                        WidthRequest="30"
+                        HorizontalOptions="Center"
+                        VerticalOptions="Center"/>
 
-        </HorizontalStackLayout>
-    </Frame>
+                <Label x:Name="nameLabel"
+                        IsVisible="false"
+                        VerticalTextAlignment="Center"
+                        VerticalOptions="Center"
+                        Margin="10, 0, 10, 0"
+                        TextColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"/>
+
+            </HorizontalStackLayout>
+        </Frame>
+
+        <Border StrokeThickness="0"
+                AbsoluteLayout.LayoutBounds="1, 1, 16, 16"
+                AbsoluteLayout.LayoutFlags="PositionProportional"
+                Padding="0"
+                x:Name="connectionStatusBorder"
+                BackgroundColor="#00000000"
+                >
+            <Border.StrokeShape>
+                <RoundRectangle CornerRadius="8" />
+
+            </Border.StrokeShape>
+
+            <Image x:Name="connectionStatusIcon"
+                   HeightRequest="12"
+                   WidthRequest="12"
+                   Margin="2"
+                   Aspect="AspectFit"
+                   />
+        </Border>
+    </AbsoluteLayout>
 </ContentView>
 
