plutonication dApp connection confirmation

--- a/PlutoWallet/Components/DAppConnectionView/DAppConnectionView.xaml
+++ b/PlutoWallet/Components/DAppConnectionView/DAppConnectionView.xaml
@@ -21,7 +21,8 @@
                             HeightRequest="40"
                             VerticalTextAlignment="End"/>
                         <Label
-                            Text="Connected" TextColor="Green"
+                            Text="{Binding ConnectionState}"
+                            TextColor="{Binding ConnectionStateColor}"
                             HorizontalOptions="Start" />
                     </VerticalStackLayout>
 
